2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/socks-private.h:
	* src/socks-private.c: (_gnet_socks_tcp_socket_new), (SocksAsyncData),
	  (socks_async_cb), (_gnet_socks_tcp_socket_new_async_full),
	  (_gnet_socks_tcp_socket_new_async):
	  Add _gnet_socks_tcp_socket_new_async_full() variant that takes a
	  caller-specified GMainContext.

	* doc/gnet-sections.txt:
	* src/tcp.h: (GTcpSocketNewAsyncFunc):
	* src/tcp.c: (gnet_tcp_socket_new_direct),
	  (gnet_tcp_socket_new_async_full), (gnet_tcp_socket_new_async),
	  (gnet_tcp_socket_new_async_direct_full),
	  (gnet_tcp_socket_new_async_direct), (gnet_tcp_socket_new_async_cb),
	  (gnet_tcp_socket_new_async_cancel):
	  API: add gnet_tcp_socket_new_async_direct_full()
	  API: add gnet_tcp_socket_new_direct_full()
	  Add _full() variants that take a caller-specified GMainContext.

2007-11-03  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.c: (_gnet_create_ipv4_listen_socket),
	  (_gnet_create_ipv6_listen_socket), (_gnet_create_listen_socket),
	  (_gnet_io_channel_new), (_gnet_idle_add_full), (_gnet_timeout_add_full),
	  (_gnet_io_watch_add_full):
	* src/gnet-private.h:
	* src/inetaddr.c: (gnet_inetaddr_new_list_async_full),
	  (inetaddr_new_list_async_gthread), (inetaddr_get_name_async_gthread):
	* src/mcast.c: (gnet_mcast_socket_new_full):
	* src/socks-private.c: (_gnet_socks_tcp_socket_new),
	  (_gnet_socks_tcp_socket_new_async), (_gnet_socks_tcp_socket_server_new),
	  (_gnet_socks_tcp_socket_server_accept),
	  (_gnet_socks_tcp_socket_server_accept_async),
	  (socks_tcp_socket_server_accept_async_cb):
	* src/socks-private.h:
	* src/tcp.c: (gnet_tcp_socket_new), (gnet_tcp_socket_new_async),
	  (gnet_tcp_socket_get_io_channel), (gnet_tcp_socket_server_new_full),
	  (gnet_tcp_socket_server_accept),
	  (gnet_tcp_socket_server_accept_nonblock),
	  (gnet_tcp_socket_server_accept),
	  (gnet_tcp_socket_server_accept_nonblock),
	  (gnet_tcp_socket_server_accept_async):